setup/azure/superset/stage-resources/superset-netpols.yaml
# -------------------------------------------------------------------------------------
#
# Copyright (c) 2022, WSO2 Inc. (http://www.wso2.com). All Rights Reserved.
#
# This software is the property of WSO2 Inc. and its suppliers, if any.
# Dissemination of any information or reproduction of any material contained
# herein in any form is strictly forbidden, unless permitted by WSO2 expressly.
# You may not alter or remove any copyright or other notice from copies of this content.
#
# --------------------------------------------------------------------------------------

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: superset
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: superset-worker-egress
  namespace: superset
spec:
  podSelector:
    matchLabels:
      app: superset-worker
  egress:
    - ports:
        - port: 443
        - port: 53
          protocol: UDP
        - port: 53
        - port: 5432
        - port: 6379

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-master-ingress
  namespace: superset
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: master
      app.kubernetes.io/instance: superset
      app.kubernetes.io/name: redis
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: superset

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: superset-ingress
  namespace: superset
spec:
  podSelector:
    matchLabels:
      app: superset
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stage-choreo-system-nginx-ingress
  egress:
    - to: # all except VM metadata endpoint
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-buoyant-network-policy
  namespace: superset
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          linkerd.io/extension: buoyant
      podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-linkerd-network-policy
  namespace: superset
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          linkerd.io/control-plane-ns: linkerd
      podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          linkerd.io/control-plane-ns: linkerd
      podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
